# quadb-training

./: README.md
Sumit_Goyal_CrossWallet_Cannister/wallet_cannister/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
Sumit_Goyal_CrossWallet_Cannister/wallet_cannister/src/wallet_cannister/: Cargo.toml  wallet_cannister.did
Sumit_Goyal_CrossWallet_Cannister/wallet_cannister/src/wallet_cannister/src/: lib.rs
Sumit_Goyal_Day11_HandsOn_QuadB/eth-project-one/: package-lock.json  package.json
Sumit_Goyal_Day11_HandsOn_QuadB/lottery-system/: hardhat.config.js  package-lock.json  package.json
Sumit_Goyal_Day12_HandsOn_QuadB/frontend-dapp/: package-lock.json  package.json
Sumit_Goyal_Day13_HandsOn_QuadB/attack_sim/: package-lock.json  package.json
Sumit_Goyal_Day15_HandsOn_QuadB/lending/: Move.toml
Sumit_Goyal_Day15_HandsOn_QuadB/lendingfrontend/: package-lock.json  package.json
Sumit_Goyal_Day16_HandsOn_QuadB/gastracker/: package.json
Sumit_Goyal_Day1_HandsOn_QuadB/: dfx.json  package-lock.json  package.json
Sumit_Goyal_Day2_HandsOn_QuadB/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
Sumit_Goyal_Day3_HandsOn_QuadB/: .gitignore  README.md  execute.sh  package-lock.json  package.json  tsconfig.json
Sumit_Goyal_Day3_HandsOn_QuadB/QuadB/: Cargo.toml  dfx.json  package-lock.json  package.json
Sumit_Goyal_Day3_HandsOn_QuadB/counter/: dfx.json  package-lock.json
Sumit_Goyal_Day3_HandsOn_QuadB/src/: config.ts  index.ts
Sumit_Goyal_Day4_HandsOn_QuadB/todo/: package-lock.json
misc-projects/solana/sol-nft/: create-nft.ts  (+6 more)
(+181 files in other folders)
