[package]
name = "wallet_cannister"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-macros = "0.17.1"
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib"]